mdash and photo size

--- a/pages/about.njk
+++ b/pages/about.njk
@@ -30,7 +30,7 @@ Turnings are the result of 3-5” branches being halved and mounted to create a 
 Live edged bowls can be startlingly beautiful due to shape, wall thickness and finish. 
 Very safe, boiled linseed oil as a finish. Branches will come from native deciduous trees including fruit and exotics as catalpa. 
 Chestnut without the nut.” </i>
-<p> - a selection from Peter's plans for this project (unedited).
+<p>— a selection from Peter's plans for this project (unedited).
 <br>
 <br>
 <br>
@@ -43,4 +43,4 @@ Chestnut without the nut.” </i>
 Please read more about our beloved father <a href=https://pilonfamily.ca/tribute/details/2963/Peter-Schleihauf/obituary.html#tribute-start> in his obituary.</a>
 <p>
 
-<img src ="{{ '/static/images/dad.jpeg' | url }}" alt= "Peter is smiling on a sunny day. There is water behind him. He is wearing a blue collared shirt">
+<img src="{{ '/static/images/dad.jpeg' | url }}" alt= "Peter is smiling on a sunny day. There is water behind him. He is wearing a blue collared shirt" class="photo" />
