leave bowl links as real links
handle clicks with JS enabled via click handler instead of rewriting links to hash targets

also ignores any clicks with modifier keys, so ctrl/shift+click still opens the detail page in a new tab/window.

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -17,8 +17,7 @@ layout: base
         <a
           id="{{ bowl.number }}"
           href="{{ ('/bowl/' + bowl.number + '/') | url }}"
-          title="Bowl #{{ bowl.number }}"
-          data-overlay-bowl="{{ bowl.number }}">
+          title="Bowl #{{ bowl.number }}">
           <span class="visually-hidden focusable">
             bowl #{{ bowl.number }}
           </span>
